--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,9 +1,9 @@
 {
   "Authentication": {
-    "JwtKey": "PRIVATE_KEY",
+    "JwtKey": "PRIVATE_KEY_SUPER_TURBO_PRIVATE_CANT_TOUCH_THIS",
     "JwtExpireDays": 15,
     "JwtIssuer":  "http://restaurantapi.com"
-  }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
